welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: illegal start of simple expression
  T(0 )= =0 ;
         ^